# app/Http/Controllers/PageContentController.php
@@ -18,6 +18,40 @@ class PageContentController extends Controller
     {
         $this->pagecontentService = $pagecontentService;
     }
+    /**
+     * @OA\Post(
+     *     path="/api/GetPageData",
+     *     tags={"Get Page contents"},
+     *     description="Get Page contents",
+     *     summary="Get Page contents",
+     *     @OA\Parameter(
+     *          name="bus_operator_id",
+     *          description="bus operator Id",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="integer",
+     *              default=152,
+     *          )
+     *      ),
+     *     @OA\Parameter(
+     *          name="page_url",
+     *          description="page url",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string",
+     *              default="about-us",
+     *          )
+     *      ),
+     *  @OA\Response(response="200", description="Get all Page contents"),
+     *  @OA\Response(response=401, description="Unauthorized"),
+     *     security={
+     *       {"apiAuth": {}}
+     *     }
+     * )
+     * 
+     */
     public function getAllpagecontent(Request $request)
     {
         $pagecontent = $this->pagecontentService->getAll($request);
